remove old options from maven Support adding service dependencies after a service has been built